--- a/1_Introduction_to_Python.html
+++ b/1_Introduction_to_Python.html
@@ -3223,6 +3223,7 @@ slide:not(.current) .plotly.html-widget{
 <ul>
 <li>nbextensions: conda install -c conda-forge jupyter_contrib_nbextensions</li>
 <li>nbextensions manager: conda install -c conda-forge jupyter_contrib_nbextensions</li>
+<li>enable Code prettify, Table of contents, Hinterland</li>
 </ul></article></slide>
 
 
